--- a/README.ipynb
+++ b/README.ipynb
@@ -11,7 +11,8 @@
     "This code provides an interface to the attention mechanism described in \"Deep Object-Centric Representations forGeneralizable Robot Learning\" (Devin et al. 2017) available on arxiv https://arxiv.org/abs/1708.04225. It uses a tensorflow model to attend to objects and it publishes the results to ROS at about 10-20Hz on our machines. This is intended to be used with an robot learning package such as Guided Policy Search  (https://github.com/cbfinn/gps)\n",
     "\n",
     "This code is written for Python2 and Tensorflow 1.2, and ROS Indigo. \n",
-    "For dependencies, we recommend using a python virtualenv to avoid conflicts with other pip installs. This is done in the install script:"
+    "\n",
+    "Firts, let's download the network weights:"
    ]
   },
   {
@@ -20,17 +21,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "./setup_linux.sh"
+    "wget https://people.eecs.berkeley.edu/~coline/data/bvlc_alexnet.npy\n",
+    "mkdir rpn_net/model\n",
+    "cd rpn_net/model\n",
+    "wget https://people.eecs.berkeley.edu/~coline/data/fasterrcnn_vgg_coco_net.tfmodel\n",
+    "cd ../util/faster_rcnn_lib && make\n",
+    "cd ../../.."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other platforms are not yet supported.\n",
-    "\n",
-    "\n",
-    "To use the example data, copy it into the data directory:"
+    "Next, let's download the example data:"
    ]
   },
   {
@@ -69,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The script will display an image form the demo with the RPN boxes. Click on a pixel to select the box that contains it. If multiple box contains the pixel you clicked, use the left/right arrow keys to cycle through them. Try click on the brown mug and press ENTER when your preferred box is green. This will save out the features to myfeats.npy.\n",
+    "The script will display an image form the demo with the RPN boxes. Click on a pixel to select the box that contains it. If multiple box contains the pixel you clicked, use the left/right arrow keys to cycle through them. Try click on the brown mug and press ENTER when your preferred box is green. This will save out the features to myfeats.npy. Finally close the image window.\n",
     "\n",
     "If you don't want to do any finetuning, you can just use \"myfeats.npy\" as the attention. However, to finetune follow the following steps:"
    ]
@@ -88,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model will save out weights periodically, to reload the network from iteration 10000 and look at it's attention, run"
+    "The model will save out weights periodically, to reload the network from iteration 10000 and look at it's attention, [run this notebook](reload_and_show.ipynb)."
    ]
   },
   {
@@ -98,22 +101,6 @@
    "outputs": [],
    "source": [
     "python train_model.py example.yaml -t 10000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will open up an IPython notebook and you can view the soft-attended box by running"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show(plt.imshow(img))"
    ]
   },
   {
@@ -160,7 +147,6 @@
    ]
   }
  ],
-
  "metadata": {
   "kernelspec": {
    "display_name": "Bash",
